--- a/static/css/bar.css
+++ b/static/css/bar.css
@@ -4,6 +4,15 @@ body{
     font-family: sans-serif;
     /*background: black;*/
 }
+html,body{
+    height: 100%;
+    width: 100%;
+}
+nav{
+    width: 100%;
+    position: absolute;
+    top: 0;
+}
 #topbar{
     position: relative;
     justify-content: center;
@@ -59,7 +68,9 @@ body{
     z-index: -1;
     width: 100%;
     height: 45px;
-    background: #55efc4;
+    background: #11998e;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #27c261, #11998e);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #27c261, #11998e); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
     transform: scale(0);
 
@@ -147,8 +158,11 @@ body{
     opacity: 1;
 }
 .submenu a:hover{
-    background: #55efc4;
-    font-weight: bold;
+    background: #11998e;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #27c261, #11998e);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #27c261, #11998e); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+    /*font-weight: bold;*/
     color: white;
     transition: .5s;
 }
