--- a/static/css/team_name.css
+++ b/static/css/team_name.css
@@ -1,14 +1,18 @@
 
 
 .team-container {
-    font-size: 120px;
-    font-weight: bold;
+
+    top: 100px;
+    font-size: 130px;
+    font-weight: bolder;
     text-transform: uppercase;
+
     z-index: -100;
 }
 
 .team-container svg {
     position: absolute;
+    top: 10px;
     width: 100%;
     height: 100%;
 }
@@ -25,7 +29,7 @@
     animation: text1 4s ease-in-out forwards;
 }
 .team-container .text:nth-child(4n + 2) {
-    stroke: rgb(47, 169, 92);
+    stroke: rgb(235, 61, 50);
     animation: text2 4s ease-in-out forwards;
 }
 .team-container .text:nth-child(4n + 3) {
@@ -33,7 +37,7 @@
     animation: text3 4s ease-in-out forwards;
 }
 .team-container .text:nth-child(4n + 4) {
-    stroke: rgb(235, 61, 50);
+    stroke: rgb(47, 169, 92);
     animation: text4 4s ease-in-out forwards;
 }
 
