--- a/static/css/cell.css
+++ b/static/css/cell.css
@@ -7,7 +7,7 @@
 }
 .cell-wrapper{
   position: relative;
-  top: -650px;
+  top: -680px;
 }
 
 
@@ -103,6 +103,138 @@
   height: 18px;
   background-color: #bc413e;
 }
+.covid-sticks {
+  position: absolute;
+  bottom: 33px;
+  left: 36px;
+}
+.g-covid-sticks {
+  position: absolute;
+  bottom: 33px;
+  left: 36px;
+}
+
+.covid-stick {
+  position: absolute;
+  overflow: visible;
+  display: block;
+  width: 6px;
+  z-index: -1;
+  height: 50px;
+  background-image: url("../images/dark-stripes.png"), -webkit-gradient(linear, right bottom, left top, from(#9d1231), color-stop(#ae1a38), color-stop(#be2240), color-stop(#d02a47), color-stop(#e1324f), color-stop(#ea4153), color-stop(#f34e58), color-stop(#fc5b5d), color-stop(#fd6e61), color-stop(#fe7f68), color-stop(#ff8f70), to(#ff9e7a));
+  background-image: url("../images/dark-stripes.png"), linear-gradient(to left top, #9d1231, #ae1a38, #be2240, #d02a47, #e1324f, #ea4153, #f34e58, #fc5b5d, #fd6e61, #fe7f68, #ff8f70, #ff9e7a);
+}
+.g-covid-stick {
+  position: absolute;
+  overflow: visible;
+  display: block;
+  width: 6px;
+  z-index: -1;
+  height: 50px;
+  background-image: url("../images/dark-stripes.png"), -webkit-gradient(linear, right bottom, left top, from(#3c9d12), color-stop(#53ae1a), color-stop(#5ebe22), color-stop(#48d02a), color-stop(#e1324f), color-stop(#ea4153), color-stop(#f34e58), color-stop(#fc5b5d), color-stop(#fd6e61), color-stop(#fe7f68), color-stop(#ff8f70), to(#ff9e7a));
+  background-image: url("../images/dark-stripes.png"), linear-gradient(to left top, #3c9d12, #3aae1a, #44be22, #35d02a, #e1324f, #ea4153, #f34e58, #fc5b5d, #fd6e61, #fe7f68, #ff8f70, #ff9e7a);
+}
+.covid-stick:before {
+  content: "";
+  position: absolute;
+  width: 16px;
+  height: 16px;
+  background-image: url("../images/dark-stripes.png"), -webkit-gradient(linear, right bottom, left top, from(#9d1231), color-stop(#ae1a38), color-stop(#be2240), color-stop(#d02a47), color-stop(#e1324f), color-stop(#ea4153), color-stop(#f34e58), color-stop(#fc5b5d), color-stop(#fd6e61), color-stop(#fe7f68), color-stop(#ff8f70), to(#ff9e7a));
+  background-image: url("../images/dark-stripes.png"), linear-gradient(to left top, #9d1231, #ae1a38, #be2240, #d02a47, #e1324f, #ea4153, #f34e58, #fc5b5d, #fd6e61, #fe7f68, #ff8f70, #ff9e7a);
+  top: 36px;
+  right: -5px;
+  border-radius: 50%;
+}
+.g-covid-stick:before {
+  content: "";
+  position: absolute;
+  width: 16px;
+  height: 16px;
+  background-image: url("../images/dark-stripes.png"), -webkit-gradient(linear, right bottom, left top, from(#3c9d12), color-stop(#41ae1a), color-stop(#be2240), color-stop(#d02a47), color-stop(#e1324f), color-stop(#ea4153), color-stop(#f34e58), color-stop(#fc5b5d), color-stop(#fd6e61), color-stop(#fe7f68), color-stop(#ff8f70), to(#ff9e7a));
+  background-image: url("../images/dark-stripes.png"), linear-gradient(to left top, #9d1231, #ae1a38, #be2240, #d02a47, #e1324f, #ea4153, #f34e58, #fc5b5d, #fd6e61, #fe7f68, #ff8f70, #ff9e7a);
+  top: 36px;
+  right: -5px;
+  border-radius: 50%;
+}
+.covid-stick:nth-child(1) {
+  bottom: 40px;
+  left: 40px;
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+.covid-stick:nth-child(2) {
+  bottom: 110px;
+  left: 8px;
+  -webkit-transform: rotate(70deg);
+  transform: rotate(70deg);
+}
+.covid-stick:nth-child(3) {
+  bottom: 180px;
+  left: -14px;
+  -webkit-transform: rotate(90deg);
+  transform: rotate(90deg);
+}
+.covid-stick:nth-child(4) {
+  bottom: 255px;
+  left: 10px;
+  -webkit-transform: rotate(110deg);
+  transform: rotate(110deg);
+}
+.covid-stick:nth-child(5) {
+  bottom: 335px;
+  left: 51px;
+  -webkit-transform: rotate(130deg);
+  transform: rotate(130deg);
+}
+.covid-stick:nth-child(6) {
+  bottom: 370px;
+  left: 122px;
+  -webkit-transform: rotate(154deg);
+  transform: rotate(154deg);
+}
+.covid-stick:nth-child(7) {
+  bottom: 370px;
+  left: 277px;
+  -webkit-transform: rotate(-154deg);
+  transform: rotate(-154deg);
+}
+.covid-stick:nth-child(8) {
+  bottom: 396px;
+  left: 200px;
+  -webkit-transform: rotate(180deg);
+  transform: rotate(180deg);
+}
+.covid-stick:nth-child(9) {
+  bottom: 335px;
+  left: 350px;
+  -webkit-transform: rotate(-130deg);
+  transform: rotate(-130deg);
+}
+.covid-stick:nth-child(10) {
+  bottom: 255px;
+  left: 390px;
+  -webkit-transform: rotate(-110deg);
+  transform: rotate(-110deg);
+}
+.covid-stick:nth-child(11) {
+  bottom: 180px;
+  left: 415px;
+  -webkit-transform: rotate(-90deg);
+  transform: rotate(-90deg);
+}
+.covid-stick:nth-child(12) {
+  bottom: 110px;
+  left: 392px;
+  -webkit-transform: rotate(-70deg);
+  transform: rotate(-70deg);
+}
+.covid-stick:nth-child(13) {
+  bottom: 40px;
+  left: 362px;
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+}
+
 .covid-spot:nth-child(6) {
   top: 206px;
   right: 315px;
@@ -315,7 +447,7 @@
   right: 160px;
 }
 .covid-eyes.left:before {
-  right: 11px;
+  right: 10px;
 }
 .covid-eyes:before {
   content: "";
@@ -327,7 +459,6 @@
   border-radius: 50%;
   background-color: #fff;
 }
-
 @-webkit-keyframes eyes-blink {
   0% {
     -webkit-transform: scaleY(1);
@@ -919,7 +1050,7 @@
 
 .g-cell-wrapper{
   position: relative;
-  top: -822px;
+  top: -940px;
 }
 .g-covid-wrapper {
   position: absolute;
