--- a/static/css/bar.css
+++ b/static/css/bar.css
@@ -13,8 +13,9 @@ html,body{
     width: 100%;
 }
 nav{
+    z-index: 99;
     width: 100%;
-    position: absolute;
+    position: sticky;
     top: 0;
 }
 .nav-wrapper{
