--- a/static/css/cell.css
+++ b/static/css/cell.css
@@ -121,8 +121,8 @@
   width: 6px;
   z-index: -1;
   height: 50px;
-  background-image: url("../images/dark-stripes.png"), -webkit-gradient(linear, right bottom, left top, from(#9d1231), color-stop(#ae1a38), color-stop(#be2240), color-stop(#d02a47), color-stop(#e1324f), color-stop(#ea4153), color-stop(#f34e58), color-stop(#fc5b5d), color-stop(#fd6e61), color-stop(#fe7f68), color-stop(#ff8f70), to(#ff9e7a));
-  background-image: url("../images/dark-stripes.png"), linear-gradient(to left top, #9d1231, #ae1a38, #be2240, #d02a47, #e1324f, #ea4153, #f34e58, #fc5b5d, #fd6e61, #fe7f68, #ff8f70, #ff9e7a);
+  background-image: url("../img/dark-stripes.png"), -webkit-gradient(linear, right bottom, left top, from(#9d1231), color-stop(#ae1a38), color-stop(#be2240), color-stop(#d02a47), color-stop(#e1324f), color-stop(#ea4153), color-stop(#f34e58), color-stop(#fc5b5d), color-stop(#fd6e61), color-stop(#fe7f68), color-stop(#ff8f70), to(#ff9e7a));
+  background-image: url("../img/dark-stripes.png"), linear-gradient(to left top, #9d1231, #ae1a38, #be2240, #d02a47, #e1324f, #ea4153, #f34e58, #fc5b5d, #fd6e61, #fe7f68, #ff8f70, #ff9e7a);
 }
 
 .covid-stick:before {
@@ -130,8 +130,8 @@
   position: absolute;
   width: 16px;
   height: 16px;
-  background-image: url("../images/dark-stripes.png"), -webkit-gradient(linear, right bottom, left top, from(#9d1231), color-stop(#ae1a38), color-stop(#be2240), color-stop(#d02a47), color-stop(#e1324f), color-stop(#ea4153), color-stop(#f34e58), color-stop(#fc5b5d), color-stop(#fd6e61), color-stop(#fe7f68), color-stop(#ff8f70), to(#ff9e7a));
-  background-image: url("../images/dark-stripes.png"), linear-gradient(to left top, #9d1231, #ae1a38, #be2240, #d02a47, #e1324f, #ea4153, #f34e58, #fc5b5d, #fd6e61, #fe7f68, #ff8f70, #ff9e7a);
+  background-image: url("../img/dark-stripes.png"), -webkit-gradient(linear, right bottom, left top, from(#9d1231), color-stop(#ae1a38), color-stop(#be2240), color-stop(#d02a47), color-stop(#e1324f), color-stop(#ea4153), color-stop(#f34e58), color-stop(#fc5b5d), color-stop(#fd6e61), color-stop(#fe7f68), color-stop(#ff8f70), to(#ff9e7a));
+  background-image: url("../img/dark-stripes.png"), linear-gradient(to left top, #9d1231, #ae1a38, #be2240, #d02a47, #e1324f, #ea4153, #f34e58, #fc5b5d, #fd6e61, #fe7f68, #ff8f70, #ff9e7a);
   top: 36px;
   right: -5px;
   border-radius: 50%;
