--- a/static/css/home-style.css
+++ b/static/css/home-style.css
@@ -54,40 +54,73 @@
 
 }
 footer{
-    background-image: url(../img/footer.jpg) ;
-    background-size: cover;
-    background-position: center;
-    width: 100%;
-    height: 350px;
-    margin: 30px auto ;
+
+    background: #efeeee;
+    height: 300px;
+    margin: 20px auto ;
     margin-bottom: 0px;
+    width: 100%;
+    padding-top: 100px;
     z-index: -1;
 }
-.logos{
-    /*display: flex;*/
-    position: relative;
-    z-index: 10;
+
+footer .container{
+
+    margin: 0px auto;
+    width: 70%;
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    align-items: center;
 }
-.f-logo{
-    width: auto;
-    height: 180px;
-    margin: 20px auto;
-}
-.buct-logo{
-    height: 210px;
-    margin-left: 12%;
-}
-.igem-logo{
-    margin-left: 10%;
-    margin-right: 10%;
-}
-.team-logo{
-    height: 200px;
-    margin-right: 8%;
-}
+
+
 .copyright{
+    margin-top: 30px;
     text-align: center;
     font-family: "Hind Madurai", sans-serif !important;
     font-size: 20px;
-    color: white;
+    color: slategray;
+}
+
+footer .container .box{
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    align-items: center;
+    width: 200px;
+    height: 140px;
+    margin: 20px;
+
+}
+footer .container .box .img{
+    /*width: 100px;*/
+    height: 100px;
+    padding: 20px;
+    box-shadow: 18px 18px 30px rgba(0, 0, 0, 0.1),
+    -18px -18px 30px rgba(255,255,255,1);
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #efeeee;
+    transition: box-shadow .2s ease-in-out;
+}
+footer .container .box .img img{
+    height: 100px;
+    transition: width .2s ease-out;
+}
+footer .container .box p{
+    margin-top: 20px;
+    color: slategray;
+}
+footer .container .box .img:hover{
+    box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.1),
+    0px 0px 0px rgba(255,255,255,1),
+    inset 18px 18px 30px rgba(0, 0, 0, 0.1),
+    inset -18px -18px 30px rgba(255,255,255,1);
+}
+footer .container .box .img:hover img{
+    height: 94px;
+    transition: width .2s ease-out;
 }
