--- a/static/css/bar.css
+++ b/static/css/bar.css
@@ -15,7 +15,7 @@ html,body{
 nav{
     z-index: 99;
     width: 100%;
-    position: sticky;
+    position: relative;
     top: 0;
 }
 .nav-wrapper{
