--- a/static/css/members.css
+++ b/static/css/members.css
@@ -1,14 +1,18 @@
 .members-container{
     font-family: 'Poppins', sans-serif !important;
     position: relative;
-    width: 1100px;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
     padding: 30px;
-    margin: 20px auto;
+    margin: -5px auto;
+    height: 2800px;
 
+}
+canvas{
+    background-image: radial-gradient(#666, #333);
 
 }
 .members-container .card{
@@ -57,4 +61,25 @@
     opacity: 1;
     margin-top: -40px;
     transition-delay: 0.3s ;
+}
+.member-title{
+    font-family: 'Raleway', sans-serif !important;
+    width: 100%;
+    text-align: center;
+    line-height: 120px;
+   text-transform: uppercase;
+    font-size: 65px;
+    background: #00C9FF;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #92FE9D, #00C9FF);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #92FE9D, #00C9FF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+.instructors{
+    background: #B3FFAB;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #12FFF7, #B3FFAB);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #12FFF7, #B3FFAB); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+
 }
