--- a/static/css/cell.css
+++ b/static/css/cell.css
@@ -840,7 +840,7 @@
 
 .covid-arms {
   position: absolute;
-  background: url(../img/dark-stripes.png), #f9515a;
+  background: url(../img/dark-stripes.png), #ff6a6a;
   width: 87px;
   height: 35px;
   z-index: 12;
@@ -849,6 +849,7 @@
   -webkit-transform: rotate(26deg) skew(57deg, -5deg);
           transform: rotate(26deg) skew(57deg, -5deg);
   border-radius: 10px 50% 50%;
+
 }
 .big-virus{
   position: absolute;
@@ -970,7 +971,7 @@
   bottom: 70px;
   -webkit-transform: rotate(146deg) skew(24deg, 5deg);
           transform: rotate(146deg) skew(24deg, 5deg);
-  background: url(../img/dark-stripes.png), #c52743;
+  background: url(../img/dark-stripes.png), #ff3d61;
 }
 
 .mask {
