增加主页波浪，增加返回顶部按钮

--- a/static/css/bar.css
+++ b/static/css/bar.css
@@ -176,3 +176,16 @@ nav{
     color: white;
     transition: .5s;
 }
+#topButton{
+    display: none;
+    position: fixed;
+    text-align: center;
+
+    z-index: 9999;
+    opacity: 1;
+
+    bottom: 100px;
+    right: 1.5%;
+
+
+}
