--- a/static/css/loading.css
+++ b/static/css/loading.css
@@ -1,212 +1,167 @@
-/*#loading-cover{*/
-/*    position: absolute;*/
-/*    top: 0px;*/
-/*    width: 100%;*/
-/*    height: 100%;*/
-/*    background: white;*/
-/*    z-index: 999;*/
-/*}*/
-/*.loading-list{*/
-/*    position: relative;*/
-/*    top: 15%;*/
-/*    display: flex;*/
-/*    justify-content: space-around;*/
-/*    align-items: center;*/
+#loading-cover{
+    position: absolute;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    background: white;
+    z-index: 999;
+}
+body{
+    --loading-green:#27c261;
+}
+.hex-border {
+    position: absolute;
+    transform: translate(-50%, -50%);
+    left: 50%;
+    top: 50%;
+    width: 170px;
+    height: 170px;
+    border: 2px solid #e3f5df;
+    border-radius: 100%;
+}
 
-/*}*/
-/*.loading {*/
+.hex-border::before {
+    content: "";
+    position: absolute;
+    width: 174px;
+    height: 174px;
+    border: 2px solid #38ea7a;
+    border-radius: 100%;
+    box-sizing: border-box;
+    clip-path: inset(0px 135px 135px 0px);
+    -webkit-clip-path: inset(0px 135px 135px 0px);
+    top: -2px;
+    left: -2px;
+    animation: rotateSmall 2s linear infinite;
+    z-index: 2;
+}
 
-/*    width: 300px;*/
-/*    text-align: center;*/
+.hex-border::after {
+    content: "";
+    position: absolute;
+    width: 174px;
+    height: 174px;
+    border: 2px solid #c7d5c5;
+    border-radius: 100%;
+    box-sizing: border-box;
+    top: -2px;
+    left: -2px;
+    clip-path: inset(0px 30px 30px 0px);
+    -webkit-clip-path: inset(0px 30px 30px 0px);
+    animation: rotateLarge 1s linear infinite;
+}
 
-/*}*/
-/*.loading4 .item {*/
-/*    width: 250px;*/
-/*    height: 250px;*/
-/*    border: 10px solid #27c261;*/
-/*    margin: 0 auto;*/
-/*    margin-top: 90px;*/
-/*    animation: loading4-box 3.2s infinite 0s;*/
-/*}*/
+.hexagons {
+    position: relative;
+    border-radius: 100%;
+    padding: 5%;
+    top: 30px;
+    left: 35px;
+}
 
-/*.loading4 .item::before {*/
-/*    content: '';*/
-/*    display: inline-block;*/
-/*    vertical-align: top;*/
-/*    width: 250px;*/
-/*    height: 0px;*/
-/*    background-color: #27c261;*/
-/*    animation: loading4 3.2s infinite 0s;*/
-/*}*/
+.hexagon {
+    position: absolute;
+    width: 40px;
+    height: 23px;
+    background-color: var(--loading-green);
+    transform: scale(1.02);
+    transform-origin: center;
+}
 
-/*@keyframes loading4-box {*/
-/*    0% {*/
-/*        transform: rotate(0deg);*/
-/*    }*/
-/*    25% {*/
-/*        transform: rotate(0deg);*/
-/*    }*/
-/*    50% {*/
-/*        transform: rotate(180deg);*/
-/*    }*/
-/*    75% {*/
-/*        transform: rotate(180deg);*/
-/*    }*/
-/*    100% {*/
-/*        transform: rotate(360deg);*/
-/*    }*/
-/*}*/
+.hexagon::before {
+    content: "";
+    position: absolute;
+    top: -11.5px;
+    left: 0;
+    width: 0;
+    height: 0;
+    border-left: 20px solid transparent;
+    border-right: 20px solid transparent;
+    border-bottom: 11.5px solid var(--loading-green);
+}
 
-/*@keyframes loading4 {*/
-/*    0% {*/
-/*        height: 0px;*/
-/*    }*/
-/*    25% {*/
-/*        height: 250px;*/
-/*    }*/
-/*    50% {*/
-/*        height: 250px;*/
-/*    }*/
-/*    75% {*/
-/*        height: 0px;*/
-/*    }*/
-/*    100% {*/
-/*        height: 0px;*/
-/*    }*/
-/*}*/
+.hexagon::after {
+    content: "";
+    position: absolute;
+    top: 23px;
+    left: 0;
+    width: 0;
+    height: 0;
+    border-left: 20px solid transparent;
+    border-right: 20px solid transparent;
+    border-top: 11.5px solid var(--loading-green);
+}
 
+.hexagon:nth-child(1) {
+    animation: animateHex 3s infinite;
+}
+.hexagon:nth-child(2) {
+    left: 53px;
+    animation: animateHex 3s 0.2s infinite;
+}
 
-/*.loading2 .wrapper {*/
-/*    height: 100%;*/
-/*    margin: 0 auto;*/
-/*    font-size: 0;*/
-/*}*/
+.hexagon:nth-child(3) {
+    left: -13px;
+    top: 46px;
+    animation: animateHex 3s 1s infinite;
+}
 
-/*.loading2 .wrapper .item {*/
-/*    background-color: crimson;*/
-/*    width: 15px;*/
-/*    height: 0px;*/
-/*    display: inline-block;*/
-/*    font-size: 0;*/
-/*    margin: 0 5px;*/
-/*    position: relative;*/
-/*    transform: translateY(145px);*/
-/*}*/
+.hexagon:nth-child(4) {
+    left: 31px;
+    top: 46px;
+    animation: animateHex 3s 1.2s infinite;
+}
 
-/*.loading2 .wrapper .item::before {*/
-/*    content: '';*/
-/*    height: 50px;*/
-/*    width: 15px;*/
-/*    position: absolute;*/
-/*    bottom: 0;*/
-/*    left: 0;*/
-/*    border-top-left-radius: 8px;*/
-/*    border-top-right-radius: 8px;*/
-/*    background-color: #27c261;;*/
-/*}*/
+.hexagon:nth-child(5) {
+    left: 75px;
+    top: 46px;
+    animation: animateHex 3s 0.4s infinite;
+}
 
+.hexagon:nth-child(6) {
+    top: 84px;
+    animation: animateHex 3s 0.8s infinite;
+}
 
-/*.loading2 .wrapper .item::after {*/
-/*    content: '';*/
-/*    position: absolute;*/
-/*    top: 0;*/
-/*    left: 0;*/
-/*    height: 50px;*/
-/*    width: 15px;*/
-/*    border-bottom-left-radius: 8px;*/
-/*    border-bottom-right-radius: 8px;*/
-/*    background-color: #27c261;*/
-/*}*/
+.hexagon:nth-child(7) {
+    left: 53px;
+    top: 84px;
+    animation: animateHex 3s 0.6s infinite;
+}
 
-/*#left-loading .wrapper .item:nth-child(1)::before {*/
-/*    animation: loading2 2s infinite 0s;*/
-/*}*/
-/*#left-loading .wrapper .item:nth-child(2)::before {*/
-/*    animation: loading2 2s infinite .2s;*/
-/*}*/
-/*#left-loading .wrapper .item:nth-child(3)::before {*/
-/*    animation: loading2 2s infinite .4s;*/
-/*}*/
-/*#left-loading .wrapper .item:nth-child(4)::before {*/
-/*    animation: loading2 2s infinite .6s;*/
-/*}*/
-/*#left-loading .wrapper .item:nth-child(5)::before {*/
-/*    animation: loading2 2s infinite .8s;*/
-/*}*/
+@keyframes rotateSmall {
+    100% {
+        transform: rotate(1turn);
+    }
+}
 
+@keyframes rotateLarge {
+    0% {
+        clip-path: inset(0px 30px 30px 0px);
+        -webkit-clip-path: inset(0px 30px 30px 0px);
+    }
+    50% {
+        clip-path: inset(0px 150px 150px 0px);
+        -webkit-clip-path: inset(0px 150px 150px 0px);
+    }
+    100% {
+        transform: rotate(1turn);
+        clip-path: inset(0px 30px 30px 0px);
+        -webkit-clip-path: inset(0px 30px 30px 0px);
+    }
+}
 
-/*#left-loading .wrapper .item:nth-child(1)::after {*/
-/*    animation: loading2 2s infinite 0s;*/
-/*}*/
-/*#left-loading .wrapper .item:nth-child(2)::after {*/
-/*    animation: loading2 2s infinite .2s;*/
-/*}*/
-/*#left-loading .wrapper .item:nth-child(3)::after {*/
-/*    animation: loading2 2s infinite .4s;*/
-/*}*/
-/*#left-loading .wrapper .item:nth-child(4)::after {*/
-/*    animation: loading2 2s infinite .6s;*/
-/*}*/
-/*#left-loading .wrapper .item:nth-child(5)::after {*/
-/*    animation: loading2 2s infinite .8s;*/
-/*}*/
-
-
-/*#right-loading .wrapper .item:nth-child(5)::before {*/
-/*    animation: loading2 2s infinite 0s;*/
-/*}*/
-/*#right-loading .wrapper .item:nth-child(4)::before {*/
-/*    animation: loading2 2s infinite .2s;*/
-/*}*/
-/*#right-loading .wrapper .item:nth-child(3)::before {*/
-/*    animation: loading2 2s infinite .4s;*/
-/*}*/
-/*#right-loading .wrapper .item:nth-child(2)::before {*/
-/*    animation: loading2 2s infinite .6s;*/
-/*}*/
-/*#right-loading .wrapper .item:nth-child(1)::before {*/
-/*    animation: loading2 2s infinite .8s;*/
-/*}*/
-
-
-/*#right-loading .wrapper .item:nth-child(5)::after {*/
-/*    animation: loading2 2s infinite 0s;*/
-/*}*/
-/*#right-loading .wrapper .item:nth-child(4)::after {*/
-/*    animation: loading2 2s infinite .2s;*/
-/*}*/
-/*#right-loading .wrapper .item:nth-child(3)::after {*/
-/*    animation: loading2 2s infinite .4s;*/
-/*}*/
-/*#right-loading .wrapper .item:nth-child(2)::after {*/
-/*    animation: loading2 2s infinite .6s;*/
-/*}*/
-/*#right-loading .wrapper .item:nth-child(1)::after {*/
-/*    animation: loading2 2s infinite .8s;*/
-/*}*/
-
-/*@keyframes loading2 {*/
-/*    0% {*/
-/*        height: 50px;*/
-/*    }*/
-/*    50% {*/
-/*        height: 5px;*/
-/*    }*/
-/*    100% {*/
-/*        height: 50px;*/
-/*    }*/
-/*}*/
-/*#loading-cover{*/
-/*    text-align: center;*/
-/*}*/
-
-/*#left-loading,#right-loading{*/
-/*    height: 225px;*/
-/*}*/
-/*.logo-loading{*/
-/*    position: absolute;*/
-/*    width: 240px;*/
-/*    z-index: 1000;*/
-/*    top: 35%;*/
-/*    transform: translate(-120px,0);*/
-/*}*/
+@keyframes animateHex {
+    0% {
+        transform: scale(1.02);
+    }
+    20%,
+    50% {
+        transform: scale(0.6);
+        opacity: 0;
+    }
+    65% {
+        transform: scale(1.02);
+        opacity: 1;
+    }
+}
