--- a/static/css/members.css
+++ b/static/css/members.css
@@ -11,8 +11,9 @@
     height: 2800px;
 
 }
-canvas{
-    background-image: radial-gradient(#666, #333);
+#three-container canvas{
+    margin-top: 50px;
+    background-color:  rgb(250, 255, 250);
 
 }
 .members-container .card{
