修复导航栏bug，改变导航栏固定顶部时，文章标题被覆盖的情况，修复滑动文章后刷新加载异常的问题

--- a/static/css/bar.css
+++ b/static/css/bar.css
@@ -57,6 +57,10 @@ nav{
 
     font-weight: bold;
 }
+.main-menu{
+    height: 70px !important;
+}
+
 .main-menu-btn:hover{
     color: white;
 }
@@ -69,7 +73,7 @@ nav{
     top: -3px;
     left: 0;
     width: 100%;
-    height: 50px;
+    height: 50px ;
     z-index: -1;
     border-top: 1px solid #55efc4;
     border-bottom: 1px solid #55efc4;
