--- a/static/css/bar.css
+++ b/static/css/bar.css
@@ -15,13 +15,14 @@ html,body{
 nav{
     z-index: 99;
     height: 86px;
-    width: 99%;
+    width: 95%;
     position: fixed;
     padding: 0;
     background-color: rgba(255, 255, 255, 0.9);
     border-radius: 43px;
-    margin: 4px 0 0 10px;
+    margin: 15px 0 0 2.5%;
     top: 0;
+
 }
 .nav-wrapper{
      height: 86px;
@@ -197,9 +198,9 @@ nav{
 
 }
 .main-menu a img{
-    width: 150px;
-    margin: 2px 0 0 10px;
-    border-radius: 40px;
+    width: 215px;
+    margin: -12px 0 0 -20px;
+    border-radius: 42px;
     transition: box-shadow 0.4s ease-in-out;
 }
 .main-menu a img:hover{
