--- a/static/css/footer.css
+++ b/static/css/footer.css
@@ -3,11 +3,11 @@ footer{
 
     background: #efeeee;
     height: 300px;
-    margin: 150px auto ;
-    margin-bottom: 0px;
-    width: 110%;
+    margin: 150px auto 0px;
+    width: 100%;
     padding-top: 100px;
     z-index: -1;
+    align-items: center;
 }
 
 footer .container{
@@ -21,11 +21,12 @@ footer .container{
 }
 
 
-.copyright{
-    margin-top: 30px;
-    text-align: center;
+.buct-copyright{
+    text-align: center!important;
+    width: 100%;
+    margin: 30px auto!important;
     font-family: "Hind Madurai", sans-serif !important;
-    font-size: 20px;
+    font-size: 20px!important;
     color: slategray;
 }
 
