--- a/static/css/loading.css
+++ b/static/css/loading.css
@@ -1,10 +1,10 @@
 #loading-cover{
-    position: absolute;
-    top: 0px;
+    position: fixed;
+    top: 0;
     width: 100%;
     height: 100%;
     background: white;
-    z-index: 999;
+    z-index: 12000;
 }
 body{
     --loading-green:#27c261;
