--- a/static/css/team_name.css
+++ b/static/css/team_name.css
@@ -2,17 +2,15 @@
 
 .team-container {
 
-    top: 100px;
-    font-size: 140px;
+    width: 100vw;
+    height: 400px;
+    font-size: 140px !important;
     font-weight: bolder;
     text-transform: uppercase;
-
-    z-index: -100;
+    z-index: 0;
 }
 
 .team-container svg {
-    position: absolute;
-    top: 10px;
     width: 100%;
     height: 100%;
 }
