--- a/static/css/footer.css
+++ b/static/css/footer.css
@@ -4,7 +4,7 @@ footer{
     background: #efeeee;
     height: 300px;
     margin: 150px auto 0px;
-    width: 100%;
+    width: 102vw;
     padding-top: 100px;
     z-index: -1;
     align-items: center;
