--- a/static/css/card_component.css
+++ b/static/css/card_component.css
@@ -1,5 +1,4 @@
 
-@import url(//fonts.googleapis.com/css?family=Lato:300,400,900);
 @font-face {
 	font-family: 'codropsicons';
 	font-weight: normal;
@@ -20,7 +19,7 @@
 
 .t-card-wrapper {
 	margin: 0 auto 100px auto;
-	max-width: 960px;
+	max-width: 70vw;
 }
 
 .stage {
@@ -67,7 +66,7 @@ Build the scene and rotate on hover
 Transform and style the two planes
 **************************************/
 
-.movie .poster, 
+.movie .poster,
 .movie .info {
 	position: absolute;
 	width: 260px;
@@ -174,12 +173,12 @@ Generate "lighting" using box shadows
 	box-shadow: inset 300px 0px 40px rgba(255,255,255,0.8);
 }
 
-.csstransforms3d .movie .info, 
+.csstransforms3d .movie .info,
 .csstransforms3d .movie .info header {
 	box-shadow: inset -300px 0px 40px rgba(0,0,0,0.5);
 }
 
-.csstransforms3d .movie:hover .info, 
+.csstransforms3d .movie:hover .info,
 .csstransforms3d .movie:hover .info header {
 	box-shadow: inset 0px 0px 40px rgba(0,0,0,0);
 }
@@ -193,38 +192,38 @@ Posters and still images
 }
 
 .scene:nth-child(1) .movie .poster {
-  background-image: url(../img/members/t1.jpg);
+	background-image: url("https://2020.igem.org/wiki/images/2/23/T--BUCT--t1.jpg");
 }
 
 .scene:nth-child(2) .poster {
-  background-image: url(../img/members/t2.jpg);
+	background-image: url("https://2020.igem.org/wiki/images/e/e5/T--BUCT--t2.jpg");
 }
 
 .scene:nth-child(3) .poster {
-  background-image: url(../img/demo/poster03.jpg);
+	background-image: url("https://2020.igem.org/wiki/images/e/e5/T--BUCT--t2.jpg");
 }
 
 .scene:nth-child(1) .info header {
-	background-image: url(../img/members/t-header.png);
+	background-image: url("https://2020.igem.org/wiki/images/0/0c/T--BUCT--t-header.png");
 
 
 }
 
 .scene:nth-child(2) .info header {
-	background-image: url(../img/members/t-header2.png);
+	background-image: url("https://2020.igem.org/wiki/images/a/aa/T--BUCT--t-header2.png");
 
 
 
 }
 
 .scene:nth-child(3) .info header {
-	background-image: url(../img/demo/still03.jpg);
+	background-image: url("https://2020.igem.org/wiki/images/a/aa/T--BUCT--t-header2.png");
 }
 
 /*************************************
 Fallback
 **************************************/
-.no-csstransforms3d .movie .poster, 
+.no-csstransforms3d .movie .poster,
 .no-csstransforms3d .movie .info {
 	position: relative;
 }
