--- a/static/css/cell.css
+++ b/static/css/cell.css
@@ -1,5 +1,5 @@
 .virus-container{
-  width: 100%;
+  width: 100vw;
   margin-top: 250px;
 }
 
@@ -26,7 +26,7 @@
 
   border-radius: 50%;
   -webkit-animation: pulse 2s infinite;
-          animation: pulse 2s infinite;
+  animation: pulse 2s infinite;
 }
 .covid-pulse {
   content: "";
@@ -267,7 +267,7 @@
   z-index: 99;
   border-radius: 50%;
   -webkit-animation: slip 7s linear infinite alternate;
-          animation: slip 7s linear infinite alternate;
+  animation: slip 7s linear infinite alternate;
 }
 .virus:nth-child(1) {
   top: 0;
@@ -277,7 +277,7 @@
   background-color: #f43a62;
   box-shadow: inset 0px 0px 0px 4px #8f2453, 0 0 12px 3px #8f2453;
   -webkit-animation-delay: 0.6s;
-          animation-delay: 0.6s;
+  animation-delay: 0.6s;
 }
 .virus:nth-child(2) {
   top: 190px;
@@ -287,7 +287,7 @@
   background-color: #f43a62;
   box-shadow: inset 0px 0px 0px 6px #8f2453, 0 0 12px 3px #8f2453;
   -webkit-animation-delay: 0.7s;
-          animation-delay: 0.7s;
+  animation-delay: 0.7s;
 }
 .virus:nth-child(3) {
   top: 140px;
@@ -297,7 +297,7 @@
   background-color: #f08e61;
   box-shadow: inset 0px 0px 0px 6px #90545d, 0 0 12px 3px #90545d;
   -webkit-animation-delay: 1s;
-          animation-delay: 1s;
+  animation-delay: 1s;
 }
 .virus:nth-child(4) {
   top: 440px;
@@ -307,7 +307,7 @@
   background-color: #f08e61;
   box-shadow: inset 0px 0px 0px 4px #90545d, 0 0 12px 3px #90545d;
   -webkit-animation-delay: 0.3s;
-          animation-delay: 0.3s;
+  animation-delay: 0.3s;
 }
 .virus:nth-child(5) {
   top: 380px;
@@ -317,7 +317,7 @@
   background-color: #f43a62;
   box-shadow: inset 0px 0px 0px 4px #8f2453, 0 0 12px 3px #8f2453;
   -webkit-animation-delay: 1.2s;
-          animation-delay: 1.2s;
+  animation-delay: 1.2s;
 }
 .virus:nth-child(6) {
   top: -30px;
@@ -327,7 +327,7 @@
   background-color: #f43a62;
   box-shadow: inset 0px 0px 0px 4px #8f2453, 0 0 12px 3px #8f2453;
   -webkit-animation-delay: 2s;
-          animation-delay: 2s;
+  animation-delay: 2s;
 }
 .virus:nth-child(7) {
   top: -80px;
@@ -337,7 +337,7 @@
   background-color: #f08e61;
   box-shadow: inset 0px 0px 0px 4px #90545d, 0 0 12px 3px #90545d;
   -webkit-animation-delay: 1.4s;
-          animation-delay: 1.4s;
+  animation-delay: 1.4s;
 }
 .virus:nth-child(8) {
   top: 30px;
@@ -347,7 +347,7 @@
   background-color: #f08e61;
   box-shadow: inset 0px 0px 0px 6px #90545d, 0 0 12px 3px #90545d;
   -webkit-animation-delay: 1.5s;
-          animation-delay: 1.5s;
+  animation-delay: 1.5s;
 }
 .virus:nth-child(9) {
   top: 270px;
@@ -357,7 +357,7 @@
   background-color: #f43a62;
   box-shadow: inset 0px 0px 0px 4px #8f2453, 0 0 12px 3px #8f2453;
   -webkit-animation-delay: 0.8s;
-          animation-delay: 0.8s;
+  animation-delay: 0.8s;
 }
 .virus:nth-child(10) {
   top: 390px;
@@ -367,52 +367,52 @@
   background-color: #f08e61;
   box-shadow: inset 0px 0px 0px 6px #90545d, 0 0 12px 3px #90545d;
   -webkit-animation-delay: 1.1s;
-          animation-delay: 1.1s;
+  animation-delay: 1.1s;
 }
 
 @-webkit-keyframes slip {
   0% {
     -webkit-transform: translate(0px, 0px);
-            transform: translate(0px, 0px);
+    transform: translate(0px, 0px);
   }
   20% {
     -webkit-transform: translate(-6px, -6px);
-            transform: translate(-6px, -6px);
+    transform: translate(-6px, -6px);
   }
   40% {
     -webkit-transform: translate(0px, 0px);
-            transform: translate(0px, 0px);
+    transform: translate(0px, 0px);
   }
   60% {
     -webkit-transform: translate(-10px, -2px);
-            transform: translate(-10px, -2px);
+    transform: translate(-10px, -2px);
   }
   100% {
     -webkit-transform: translate(0px, 0px);
-            transform: translate(0px, 0px);
+    transform: translate(0px, 0px);
   }
 }
 
 @keyframes slip {
   0% {
     -webkit-transform: translate(0px, 0px);
-            transform: translate(0px, 0px);
+    transform: translate(0px, 0px);
   }
   20% {
     -webkit-transform: translate(-6px, -6px);
-            transform: translate(-6px, -6px);
+    transform: translate(-6px, -6px);
   }
   40% {
     -webkit-transform: translate(0px, 0px);
-            transform: translate(0px, 0px);
+    transform: translate(0px, 0px);
   }
   60% {
     -webkit-transform: translate(-10px, -2px);
-            transform: translate(-10px, -2px);
+    transform: translate(-10px, -2px);
   }
   100% {
     -webkit-transform: translate(0px, 0px);
-            transform: translate(0px, 0px);
+    transform: translate(0px, 0px);
   }
 }
 .covid-eyes {
@@ -425,7 +425,7 @@
   bottom: 61%;
   border-radius: 50%;
   -webkit-animation: eyes-blink 4s infinite;
-          animation: eyes-blink 4s infinite;
+  animation: eyes-blink 4s infinite;
 }
 .covid-eyes.left {
   right: 160px;
@@ -446,70 +446,70 @@
 @-webkit-keyframes eyes-blink {
   0% {
     -webkit-transform: scaleY(1);
-            transform: scaleY(1);
+    transform: scaleY(1);
   }
   2% {
     -webkit-transform: scaleY(0.1);
-            transform: scaleY(0.1);
+    transform: scaleY(0.1);
   }
   4% {
     -webkit-transform: scaleY(1);
-            transform: scaleY(1);
+    transform: scaleY(1);
   }
   6% {
     -webkit-transform: scaleY(0.1);
-            transform: scaleY(0.1);
+    transform: scaleY(0.1);
   }
   8% {
     -webkit-transform: scaleY(1);
-            transform: scaleY(1);
+    transform: scaleY(1);
   }
   66% {
     -webkit-transform: scaleY(1);
-            transform: scaleY(1);
+    transform: scaleY(1);
   }
   68% {
     -webkit-transform: scaleY(1);
-            transform: scaleY(1);
+    transform: scaleY(1);
   }
   100% {
     -webkit-transform: scaleY(1);
-            transform: scaleY(1);
+    transform: scaleY(1);
   }
 }
 
 @keyframes eyes-blink {
   0% {
     -webkit-transform: scaleY(1);
-            transform: scaleY(1);
+    transform: scaleY(1);
   }
   2% {
     -webkit-transform: scaleY(0.1);
-            transform: scaleY(0.1);
+    transform: scaleY(0.1);
   }
   4% {
     -webkit-transform: scaleY(1);
-            transform: scaleY(1);
+    transform: scaleY(1);
   }
   6% {
     -webkit-transform: scaleY(0.1);
-            transform: scaleY(0.1);
+    transform: scaleY(0.1);
   }
   8% {
     -webkit-transform: scaleY(1);
-            transform: scaleY(1);
+    transform: scaleY(1);
   }
   66% {
     -webkit-transform: scaleY(1);
-            transform: scaleY(1);
+    transform: scaleY(1);
   }
   68% {
     -webkit-transform: scaleY(1);
-            transform: scaleY(1);
+    transform: scaleY(1);
   }
   100% {
     -webkit-transform: scaleY(1);
-            transform: scaleY(1);
+    transform: scaleY(1);
   }
 }
 .covid-eyebrow {
@@ -522,7 +522,7 @@
   right: 38%;
   border-radius: 50px 0 0 50px;
   -webkit-transform: rotate(56deg);
-          transform: rotate(56deg);
+  transform: rotate(56deg);
 }
 .covid-eyebrow:before {
   content: "";
@@ -548,7 +548,7 @@
   left: 160px;
   top: 148px;
   -webkit-transform: rotate(112deg);
-          transform: rotate(112deg);
+  transform: rotate(112deg);
 }
 
 .covid-mouth {
@@ -561,7 +561,7 @@
   right: 30%;
   border-radius: 50px 0 0 50px;
   -webkit-transform: rotate(90deg);
-          transform: rotate(90deg);
+  transform: rotate(90deg);
 }
 .earth-mouth {
   position: absolute;
@@ -572,7 +572,7 @@
   left: 38%;
 
   padding: 0;
-  
+
 }
 
 .covid-cheek {
@@ -637,7 +637,7 @@
   background: #bbe474;
   border-radius: 0 20px 20px 20px;
   -webkit-transform: rotate(-34deg);
-          transform: rotate(-34deg);
+  transform: rotate(-34deg);
 }
 .earth-greens:after {
   content: "";
@@ -671,7 +671,7 @@
   width: 22px;
   height: 30px;
   -webkit-transform: rotate(14deg);
-          transform: rotate(14deg);
+  transform: rotate(14deg);
   border-radius: 65% 35% 83% 17% / 73% 27% 73% 27%;
 }
 .earth-greens:nth-child(2) {
@@ -762,7 +762,7 @@
   background: #88cc60;
   z-index: -1;
   -webkit-transform: rotate(33deg);
-          transform: rotate(33deg);
+  transform: rotate(33deg);
 }
 .earth-greens:nth-child(8):before {
   border-radius: 50%;
@@ -782,7 +782,7 @@
   background: #88cc60;
   z-index: -1;
   -webkit-transform: rotate(33deg);
-          transform: rotate(33deg);
+  transform: rotate(33deg);
 }
 .earth-greens:nth-child(9):before {
   border-radius: 50%;
@@ -802,7 +802,7 @@
   background: #88cc60;
   z-index: -1;
   -webkit-transform: rotate(33deg);
-          transform: rotate(33deg);
+  transform: rotate(33deg);
 }
 .earth-greens:nth-child(10):before {
   height: 20px;
@@ -811,7 +811,7 @@
   width: 41px;
   right: -4px;
   -webkit-transform: rotate(-95deg);
-          transform: rotate(-95deg);
+  transform: rotate(-95deg);
 }
 .earth-greens:nth-child(10):after {
   background: #88cc60;
@@ -826,7 +826,7 @@
   width: 10px;
   height: 18px;
   -webkit-animation: eyes-blink 4s 1.5s infinite;
-          animation: eyes-blink 4s 1.5s infinite;
+  animation: eyes-blink 4s 1.5s infinite;
 }
 .earth-eyes:before {
   width: 3px;
@@ -850,7 +850,7 @@
   bottom: 79px;
   left: 65px;
   -webkit-transform: rotate(26deg) skew(57deg, -5deg);
-          transform: rotate(26deg) skew(57deg, -5deg);
+  transform: rotate(26deg) skew(57deg, -5deg);
   border-radius: 10px 50% 50%;
 
 }
@@ -973,7 +973,7 @@
   left: 255px;
   bottom: 70px;
   -webkit-transform: rotate(146deg) skew(24deg, 5deg);
-          transform: rotate(146deg) skew(24deg, 5deg);
+  transform: rotate(146deg) skew(24deg, 5deg);
   background: url("https://2020.igem.org/wiki/images/3/3d/T--BUCT--dark-strips.png"), #ff3d61;
 }
 
@@ -987,12 +987,12 @@
   right: 13%;
   border-radius: 250px 0 0 250px;
   -webkit-transform: rotate(268deg);
-          transform: rotate(268deg);
+  transform: rotate(268deg);
 }
 
 .mask-wrapper {
   -webkit-clip-path: polygon(50% 0%, 100% 38%, 96% 100%, 4% 100%, 0% 38%);
-          clip-path: polygon(50% 0%, 100% 38%, 96% 100%, 4% 100%, 0% 38%);
+  clip-path: polygon(50% 0%, 100% 38%, 96% 100%, 4% 100%, 0% 38%);
   width: 90px;
   height: 90px;
   background-color: #fff;
@@ -1023,7 +1023,7 @@
   right: 33%;
   z-index: -1;
   -webkit-transform: rotate(40deg);
-          transform: rotate(40deg);
+  transform: rotate(40deg);
 }
 
 @media screen and (max-width: 490px) {
@@ -1031,7 +1031,7 @@
   .earth,
   .earth-detail {
     -webkit-transform: scale(0.8);
-            transform: scale(0.8);
+    transform: scale(0.8);
   }
 
   .virus {
@@ -1040,21 +1040,21 @@
 
   .covid-arms {
     -webkit-transform: scale(0.8) rotate(26deg) skew(57deg, -5deg);
-            transform: scale(0.8) rotate(26deg) skew(57deg, -5deg);
+    transform: scale(0.8) rotate(26deg) skew(57deg, -5deg);
     bottom: 98px;
     left: 87px;
   }
 
   .covid-arms.right {
     -webkit-transform: scale(0.8) rotate(146deg) skew(24deg, 5deg);
-            transform: scale(0.8) rotate(146deg) skew(24deg, 5deg);
+    transform: scale(0.8) rotate(146deg) skew(24deg, 5deg);
     bottom: 90px;
     left: 236px;
   }
 
   .covid-pulse {
     -webkit-transform: translate(-50%, -50%) scale(0.8);
-            transform: translate(-50%, -50%) scale(0.8);
+    transform: translate(-50%, -50%) scale(0.8);
   }
 
   .earth {
@@ -1074,12 +1074,12 @@
   .earth,
   .earth-detail {
     -webkit-transform: scale(0.6);
-            transform: scale(0.6);
+    transform: scale(0.6);
   }
 
   .covid-pulse {
     -webkit-transform: translate(-50%, -50%) scale(0.6);
-            transform: translate(-50%, -50%) scale(0.6);
+    transform: translate(-50%, -50%) scale(0.6);
   }
 
   .earth {
@@ -1092,14 +1092,14 @@
 
   .covid-arms {
     -webkit-transform: scale(0.6) rotate(26deg) skew(57deg, -5deg);
-            transform: scale(0.6) rotate(26deg) skew(57deg, -5deg);
+    transform: scale(0.6) rotate(26deg) skew(57deg, -5deg);
     bottom: 122px;
     left: 107px;
   }
 
   .covid-arms.right {
     -webkit-transform: scale(0.6) rotate(146deg) skew(24deg, 5deg);
-            transform: scale(0.6) rotate(146deg) skew(24deg, 5deg);
+    transform: scale(0.6) rotate(146deg) skew(24deg, 5deg);
     bottom: 116px;
     left: 219px;
   }
@@ -1113,12 +1113,12 @@
   .earth,
   .earth-detail {
     -webkit-transform: scale(0.7);
-            transform: scale(0.7);
+    transform: scale(0.7);
   }
 
   .covid-pulse {
     -webkit-transform: translate(-50%, -50%) scale(0.7);
-            transform: translate(-50%, -50%) scale(0.7);
+    transform: translate(-50%, -50%) scale(0.7);
   }
 
   .earth {
@@ -1135,14 +1135,14 @@
 
   .covid-arms {
     -webkit-transform: scale(0.8) rotate(26deg) skew(57deg, -5deg);
-            transform: scale(0.8) rotate(26deg) skew(57deg, -5deg);
+    transform: scale(0.8) rotate(26deg) skew(57deg, -5deg);
     bottom: 108px;
     left: 95px;
   }
 
   .covid-arms.right {
     -webkit-transform: scale(0.8) rotate(146deg) skew(24deg, 5deg);
-            transform: scale(0.8) rotate(146deg) skew(24deg, 5deg);
+    transform: scale(0.8) rotate(146deg) skew(24deg, 5deg);
     bottom: 101px;
     left: 232px;
   }
@@ -1300,7 +1300,7 @@
   border-radius: 50%;
   z-index: 99;
   -webkit-animation: slip 7s linear infinite alternate;
-          animation: slip 7s linear infinite alternate;
+  animation: slip 7s linear infinite alternate;
 }
 .g-virus:nth-child(1) {
   top: 0;
