--- a/static/css/team_name.css
+++ b/static/css/team_name.css
@@ -9,7 +9,9 @@
     text-transform: uppercase;
     z-index: 0;
 }
-
+.team-container{
+    height: 200px;
+}
 .team-container svg {
     width: 100%;
     height: 100%;
