--- a/static/css/page.css
+++ b/static/css/page.css
@@ -1,10 +1,9 @@
-.article-content{
-    margin-top: 50px;
-}
+
 .article-menu{
-    position: absolute;
-    top:650px;
-    left: 60px;
+    position: fixed;
+    top:150px;
+
+    margin-left: 80px;
     width: 230px;
     height: 290px;
     display: flex;
@@ -14,6 +13,7 @@
     padding: 40px 20px 40px 35px;
     border: #02AAB0 1px solid;
     border-radius: 30px;
+    transition: opacity .5s ease-in-out;
 }
 
 .article-menu div{
@@ -37,7 +37,7 @@
 }
 .article-content{
     width: 60%;
-    margin: 430px 0 0 450px;
+    margin: 200px 0 0 450px;
 }
 .imgBox{
     display: flex;
